# SURF

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_and_show_polynomials.py  synthetic_experiments.py  visualize.py  visualize_salary.py  visualize_sensor.py
legacy/: README.md  coeffint.m  cover_experiments.m  differ.m  matcoeff.m  maxcrit.m  salary_experiments.m  surf.m
python/: .gitignore  README.md  run_and_show_polynomials.py  visualize.py  visualize_salary.py  visualize_sensor.py
python/surf/: __init__.py  core.py
src/: cover_experiments.m  experiments.m  longiterate.m  longiterate1.m  longiterate2.m  merge.m  pre_expts.m  pre_expts1.m  pre_expts2.m  pre_expts4.m  real_experiments.m  regpoly.m  salary_experiments.m  sensor_experiments.m  synthetic_experiments.m  verylongiter1.m  workshop.m
surf/: core.py
